--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="color_anim">Animate Color Change</string>
     <string name="movecolor_anim">Move and Recolor</string>
     <string name="moverotatecolor_anim">Move and Rotate, Then Color</string>
+    <string name="spin">Spin</string>
+    <string name="dribble">Dribble</string>
 </resources>
